# untitled-ecommerce-data-platform

./: .gitignore  README.md  dev.duckdb  docker-compose.yml  main.py  pyproject.toml
dags/: ecommerce_pipeline.py
docker/airflow/: Dockerfile
docker/metabase/: Dockerfile
docker/spark/: Dockerfile
docs/: PROJECT_OVERVIEW.md
gold_layer/: .user.yml  dbt_project.yml
gold_layer/models/datamart/: datamart.yml  dim_date.sql  dim_products.sql  dim_users.sql  fact_clickstream.sql  fact_orders.sql
gold_layer/models/staging/: sources.yml  staging.yml  stg_clickstream.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_users.sql
src/generators/: producer.py  schema.sql  seed.py
src/ingestion/: bronze_ingestion.py
src/processing/: export_silver.py  silver_transform.py
