[project]
name = "ecommerce-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.2",
    "dbt-duckdb>=1.10.1",
    "faker>=40.11.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
